# playground

./: .gitignore  .gitmodules  readme.md
c/threads_test/c11_threads/: CMakeLists.txt  atomic.c  detach.c  misc.c  mutex.c  thread_local.c
c_playground/: CMakeLists.txt  bubble_sort.c  hash_collision_fix.c  hash_collision_fix_linked.c  insert_sort.c  search_from_bst.c  shell_sort.c  temp.c
c_playground/esp32/esp32s3-mpu6050-test/: CMakeLists.txt  README.md
c_playground/esp32/esp32s3-mpu6050-test/main/: main.c  mpu6050.h
c_playground/linux_c/: CMakeLists.txt  fork_test.c  pthread_test.c  socket_tcp_client.c  socket_tcp_server.c
c_playground/linux_c/arm-embedded-practicum/: README.md  device.c
c_playground/linux_c/arm-embedded-practicum/qt-tcp/qt-tcp-client/: CMakeLists.txt  mainwindow.h
c_playground/linux_c/arm-embedded-practicum/qt-tcp/qt-tcp-server/: mainwindow.cpp  mainwindow.h  mainwindow.ui
c_playground/linux_c/arm-embedded-practicum/qt-tcp/qthome/: CMakeLists.txt  mainwindow.h  mainwindow.ui
c_playground/os-course/: CMakeLists.txt
c_playground/os-course/exp1/src/: main.c
c_playground/os-course/exp2/: CMakeLists.txt
c_playground/os-course/exp2/src/: main.c
c_playground/os-course/exp3/src/: main.c
c_playground/sorts/: CMakeLists.txt  count_sort.c  heap_sort.c  heap_sort_by_phi2.c  quick_sort.c  radix_sort.c  recursion_quick_sort.c  std_qsort.c
c_playground/threads_test/c11_threads/: README.md  basic_threads.c  condition_with_mutex.c
c_playground/trash/: CMakeLists.txt  check_even_using_logical_and.c  implicit_float_2_int.c  linkedlist_remove_range.c
cpp/ai-course-exp-kmeans/: CMakeLists.txt
cpp/ccf/ccp-csp-35/: CMakeLists.txt  problem_0.cpp  problem_1.cpp  problem_2.cpp  problem_3.cpp
cpp/compress_example/: CMakeLists.txt  vcpkg.json  zstd_example.cpp
cpp/lanqiaobei/: 2023_1.cpp  2023_3.cpp  2023_6.cpp  CMakeLists.txt  algorithm_accumulate.cpp  algorithm_copy_2_arr.cpp  algorithm_copy_if.cpp  algorithm_difference.cpp  algorithm_find_first_of.cpp  algorithm_gcd.cpp  algorithm_generate.cpp  algorithm_heap.cpp  algorithm_includes.cpp  algorithm_inplace_merge.cpp  algorithm_intersections.cpp  algorithm_lexicographical_compare.cpp  algorithm_merge.cpp  algorithm_minmax_element.cpp  algorithm_partition_point.cpp  algorithm_remove.cpp  algorithm_remove_copy_if.cpp  algorithm_remove_if.cpp  algorithm_replace.cpp  algorithm_replace_copy.cpp  algorithm_replace_if.cpp  algorithm_reverse_copy.cpp  algorithm_rotate_copy.cpp  algorithm_sample.cpp  algorithm_set_symmetric_difference.cpp  algorithm_sort.cpp  algorithm_stable_partition.cpp  algorithm_unique.cpp  algorithm_upper_lower_bound.cpp  chinese_output_test.cpp  lcm.cpp  leetcode_3sum.cpp  leetcode_best_time_to_buy_and_sell_stock.cpp  leetcode_binary_tree_level_order_traversal.cpp  leetcode_binary_tree_right_side_view.cpp  leetcode_coin_change_dp.cpp  (+109 more)
cpp/lanqiaobei/trash/: lqb_3527.cpp  lqb_544.cpp  lqb_674.cpp  qpow.cpp
cpp/openal_example/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cpp/opencv_body_estimate_dagon/dagong/: CMakeLists.txt
cpp/opencv_body_estimate_dagon/dagong/include/dagong/: Demo.h
cpp/opencv_body_estimate_dagon/dagong/java/: Demo.java  test_local.sh
cpp/opencv_dnn_try_out/: CMakeLists.txt  main.cpp  vcpkg.json
cpp/win_tricker_demo/demo/: CMakeLists.txt
cpp/win_tricker_demo/demo/source/: main.cpp
cpp/win_tricker_demo/trick/: CMakeLists.txt
cpp/win_tricker_demo/trick/include/trick/: trick_c.h  trick_impl_win.hpp
cpp/win_tricker_demo/trick/source/: trick_c.cpp
cpp_playground/2d_jumping_ball/: CMakeLists.txt  main.cpp  vcpkg.json
cpp_playground/2d_jumping_ball/include/jumping_ball/: audio.hpp  gameobject.hpp  graphics.hpp  physics.hpp
cpp_playground/2d_jumping_ball/src/: audio.cpp  graphics.cpp  main.cpp  physics.cpp
cpp_playground/ai-course-exp-knn/: CMakeLists.txt  README.md  akaze.cpp  akaze.hpp  dataset.cpp  knn.cpp  knn.hpp  main.cpp  orb.hpp  pca.cpp  pca.hpp
cpp_playground/compress_example/: CMakeLists.txt  lz4_example.cpp  lzma_example.cpp  readme.md  vcpkg.json
cpp_playground/cppoes/test/: CMakeLists.txt
cpp_playground/cppoes/test/source/: main.cpp
cpp_playground/crow-rest-api-test/: CMakeLists.txt  CMakePresets.json
cpp_playground/crow-rest-api-test/source/: blueprints_test.cpp  main.cpp
cpp_playground/crow-rest-api-test/templates/: test_json.html  test_ws.html  with_arg.html
cpp_playground/crow-rest-api-test/tls/: server.crt  server.csr  server.key  server.key.org
cpp_playground/ctest_intro/: CMakeLists.txt  addition_test.cpp  test_with_args.cpp
cpp_playground/gltest/: CMakeLists.txt
cpp_playground/gltest/gl/: CMakeLists.txt
cpp_playground/gltest/gl/include/gl/: instance.hpp  material.hpp  model.hpp  pipeline.hpp
cpp_playground/gltest/gl/source/: instance.cpp
cpp_playground/gltest/nioes/: CMakeLists.txt
cpp_playground/gltest/nioes/include/nioes/: instance.hpp  material.hpp  model.hpp
cpp_playground/gltest/nioes/source/: instance.cpp  material.cpp
cpp_playground/gltest/tests/: CMakeLists.txt
cpp_playground/gltest/tests/source/: my_module.cpp  test.cpp
cpp_playground/ni/: CMakeLists.txt  README.md
cpp_playground/ni/stb_test/: main.cpp
cpp_playground/opencv_onnxrt_test/: CMakeLists.txt  vcpkg.json
cpp_playground/opencv_onnxrt_test/include/detector/: YOLOv5Detector.h
cpp_playground/opencv_onnxrt_test/include/tracker/: BytekalmanFilter.h  dataType.h
cpp_playground/opencv_onnxrt_test/src/: main.cpp
cpp_playground/opencv_onnxrt_test/src/tracker/: lapjv.cpp
cpp_playground/rpi4b-step-motor-test/: CMakeLists.txt
cpp_playground/rpi4b-step-motor-test/include/: step_motor.hpp
cpp_playground/rpi4b-step-motor-test/src/: main.cpp  step_motor.cpp
cpp_playground/sort/: CMakeLists.txt  heap_sort_using_stl.cpp  std_partial_sort.cpp  std_partial_sort_copy.cpp  std_ranges_partial_sort.cpp  std_ranges_sort.cpp  std_sort.cpp  std_stable_sort.cpp
cpp_playground/spdlog_example/: CMakeLists.txt  vcpkg.json
cpp_playground/trash/: CMakeLists.txt  others_huffman_tree.cpp  print_u018.cpp
(+1629 files in other folders)
