cmake_minimum_required(VERSION 3.0.0)
project(thread_test VERSION 0.1.0 LANGUAGES C CXX)

include(CTest)
enable_testing()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(c_insert_sort insert_sort.c)
add_executable(c_binary_insert_sort binary_insert_sort.c)
add_executable(c_bubble_sort bubble_sort.c)
add_executable(c_shell_sort shell_sort.c)
add_executable(c_select_sort select_sort.c)
add_executable(c_count_sort count_sort.c)
add_executable(c_std_qsort std_qsort.c)
add_executable(c_recursion_quick_sort recursion_quick_sort.c)
add_executable(c_quick_sort quick_sort.c)
add_executable(c_heap_sort heap_sort.c)
add_executable(c_recursion_merge_sort recursion_merge_sort.c)
add_executable(c_merge_sort merge_sort.c)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
